--- a/package.json
+++ b/package.json
@@ -1,16 +1,19 @@
 {
-  "name": "voluntis-backend",
+  "name": "safira-backend",
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node app.js"
   },
   "dependencies": {
-    "cookie-parser": "~1.4.3",
+    "bcryptjs": "^2.4.3",
+    "cookie-parser": "~1.4.4",
+    "cors": "^2.8.5",
     "debug": "~2.6.9",
-    "dotenv": "^6.2.0",
-    "express": "~4.16.0",
-    "mongoose": "^5.4.13",
-    "morgan": "~1.9.0"
+    "express": "~4.16.1",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.7.7",
+    "morgan": "~1.9.1",
+    "multer": "^1.4.2"
   }
 }
